# talking-head

./: Cargo.toml  LICENSE  README.md
assets/: portrait.desktop  talking-head.desktop
src/: camera.rs  cli.rs  daemon.rs  dialog.rs  ipc.rs  main.rs  overlay.rs  style.css  tray.rs
